--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@popperjs/core": "^2.6.0"
+        "@popperjs/core": "^2.6.0",
+        "jquery": "^3.5.1",
+        "sweetalert2": "^10.12.5"
     }
 }
